# ViralFoundry

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  plan.md  progress.md  pyproject.toml
config/: niches.json
content/: brand-kits.json  briefs.json  design-system.json  workspace.json
docs/: architecture.md  policy-guardrails.md  research-brief.md  roadmap.md  strategy.md
drafts/: index.json
drafts/the-minimum-useful-video-factory/: captions.srt  design-brief.json  metadata.json  motion-plan.json  package.json  platform-variants.json  production-notes.md  render-plan.json  script.md  shot-list.json  storyboard.json
drafts/why-local-rendering-changes-the-product-risk/: audio-plan.json  captions.srt  design-brief.json  metadata.json  package.json  platform-variants.json  production-notes.md  render-plan.json  script.md  storyboard.json
output/approvals/: approval-queue.md  index.json
output/brand-kits/: brand-kit-summary.md  index.json  local-video-draft-machine.brand-kit.json
output/manifests/: the-minimum-useful-video-factory.render.json  (+1 more)
output/operations/: run-report.json  (+1 more)
src/: build-all.js  full-pipeline.js  generate-approval-queue.js  generate-brand-kits.js  generate-drafts.js  generate-operations.js  generate-provider-jobs.js  generate-publish-ledger.js  generate-review.js  generate-workspace-jobs.js  prepare-publish.js  render-videos.js  score-quality.js  validate-output.js
tests/: test_analytics.py  test_guardrails.py  test_local_generation.py  test_local_render.py  test_planner.py  test_storage.py  test_youtube_upload.py
(+37 files in other folders)
